--- a/src/app/pages/heroe/heroe.component.html
+++ b/src/app/pages/heroe/heroe.component.html
@@ -12,39 +12,56 @@
 
 <div class="row animated fadeIn faster">
     <div class="col">
-        <form>
+        <form (ngSubmit)="guardar( f )"
+            #f="ngForm">
             <div class="form-group">
                 <label>Firebase ID</label>
-                <input class="form-control" 
+                <input 
+                    class="form-control" 
                     disabled="disabled" 
-                    placeholder="Firebase ID" 
-                    type="text">
+                    name="id" 
+                    placeholder="Firebase ID"
+                    type="text"
+                    [(ngModel)]="heroe.id">
                     <small class="form-text text-muted">Este campo es autogenerado</small>
             </div>
 
             <div class="form-group">
                 <label>Nombre</label>
                 <input 
-                    class="form-control" 
+                    class="form-control"
+                    name="nombre" 
                     placeholder="Nombre" 
                     type="text"
+                    [(ngModel)]="heroe.nombre"
+                    required>
+            </div>
+
+            <div class="form-group">
+                <label>Poder</label>
+                <input 
+                    class="form-control"
+                    name="poder" 
+                    placeholder="Poder" 
+                    type="text"
+                    [(ngModel)]="heroe.poder"
                     required>
             </div>
 
             <div class="form-group">
                 <label>Estado</label>
                 <br>
-                <button class="btn btn-outline-success w-50">
+                <button *ngIf="heroe.vivo" (click)="heroe.vivo = false" class="btn btn-outline-success w-50">
                     <i class="fa fa-smile-wink"></i>
                     Vivo
                 </button>
 
-                <button class="btn btn-outline-danger w-50">
+                <button *ngIf="!heroe.vivo" (click)="heroe.vivo = true" class="btn btn-outline-danger w-50">
                     <i class="fa fa-dizzy"></i>
                     Muerto
                 </button>
             </div>
-
+            <hr>
             <div class="form-group text-center">
                 <button type="submit" class="btn btn-primary w-25">
                     <i class="fa fa-save"></i>
