http delete to firebase

--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<table class="table mt-3 animated fadeIn faster">
+<table class="table text-center mt-3 animated fadeIn faster">
     <thead class="thead-dark">
         <tr>
             <th scope="col">#</th>
@@ -27,10 +27,21 @@
             <td>{{ heroe.nombre }}</td>
             <td>{{ heroe.poder }}</td>
             <td>
-                <label *ngIf="heroe.vivo" class="badge badge-succes">Vivo</label>
+                <label *ngIf="heroe.vivo" class="badge badge-success">Vivo</label>
                 <label *ngIf="!heroe.vivo" class="badge badge-danger">Muerto</label>
             </td>
-            <td></td>
+            <td>
+                
+                <button class="btn btn-info mr-1"
+                        [routerLink]="['/heroe', heroe.id]">
+                    <i class="fa fa-pen"></i>
+                </button>
+                <button class="btn btn-danger"
+                        (click)="borrarHeroe( heroe, i )">
+                    <i class="fa fa-trash"></i>
+                </button>
+
+            </td>
         </tr>
     </tbody>
 </table>
@@ -42,7 +53,7 @@
     </p>
 </div>
 
-<div *ngIf="cargando" class="alert alert-info text-center mt-3">
+<div class="alert alert-info text-center mt-3">
     <h4 class="alert-heading">Cargando</h4>
     <p>
         <i class="fa fa-sync-alt fa-spin fa-2x"></i>
