added the logic for the no data and loading alerts

--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<table class="table text-center mt-3 animated fadeIn faster">
+<table *ngIf="!cargando && heroes.length > 0" class="table text-center mt-3 animated fadeIn faster">
     <thead class="thead-dark">
         <tr>
             <th scope="col">#</th>
@@ -46,14 +46,14 @@
     </tbody>
 </table>
 
-<div *ngIf="!heroes" class="alert alert-warning text-center mt-3">
+<div *ngIf="!cargando && heroes.length === 0" class="alert alert-warning text-center mt-3 animated fateIn faster">
     <h4 class="alert-heading">No hay registros</h4>
     <p>
         <i class="fas fa-exclamation fa-2x"></i>
     </p>
 </div>
 
-<div class="alert alert-info text-center mt-3">
+<div *ngIf="cargando" class="alert alert-info text-center mt-3 animated fateIn faster">
     <h4 class="alert-heading">Cargando</h4>
     <p>
         <i class="fa fa-sync-alt fa-spin fa-2x"></i>
